# ICP

./: Cargo.toml  README.md  dfx.json
src/sample_ic_web3_macros_backend/: Cargo.toml  sample_ic_web3_macros_backend.did
src/sample_ic_web3_macros_backend/src/: lib.rs
